Entry point (Main.java) tested